<resources>
    <string name="app_name">JullayBrandApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reg_persnl_details">Join Us Today</string>
    <string name="update_persnl_details">Update Personal Details</string>
    <string name="enter_your_name">Type Your Name</string>
    <string name="enter_your_surname">Type your Surname</string>
    <string name="verify">Verify</string>
    <string name="enter_your_age">Type Your Age</string>
    <string name="enter_your_email">Type Your Email</string>
    <string name="enter_mobile_number">Type Your Mobile No.</string>
    <string name="password">Create Password (8 Characters min.)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_otp">OTP Verification</string>
    <string name="agree_to_terms_amp_conditions">I <![CDATA[Agree to Terms & Conditions]]></string>
    <string name="signup">New to JULLAY?</string>
    <string name="or">OR</string>
    <string name="title_notifications">Notifications</string>
    <string name="send_request">Send request</string>
    <string name="my_profile">Profile</string>
    <string name="about_jullay">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="menuactivity">MenuActivity</string>
    <string name="confirm_appointment">Confirm QAT</string>
    <string name="select_qat">Check QAT</string>
    <string name="select_serv">Select Services</string>
    <string name="age">Age :</string>
    <string name="e_mail">E-Mail :</string>
    <string name="mobile_no">Mobile No. :</string>
    <string name="city">City :</string>
    <string name="select_sub_cat">Select Subcategory</string>
    <string name="search_specialist">Search A Specialist</string>
    <string name="services">Services</string>
    <string name="profile">Profile</string>
    <string name="book_appointment">Book a Time</string>
    <string name="history">History</string>
    <string name="edit_my_favourites">Edit My Favourites</string>
    <string name="select_a_specialist">Select A Specialist</string>
    <string name="converation">Offers</string>
    <string name="network_error_text">Some system/network error occur. Try again.</string>
    <string name="err_msg_name">Please use only alphabets or letters. Numbers, @, #, $, %, etc.. are not allowed.</string>
    <string name="err_msg_email">Ooops! It seems e-mail format is not correct. It should be like: xyz@abcd.com(@ and .com are necessary)</string>
    <string name="err_msg_password">Please enter the correct password. You may use that eye button for ease. If you don\'t remember it, then click on \'Forgot Password\' and set a new password.</string>
    <string name="err_msg_reg_password">Please check that password is having atleast 8 characters. For eg.. Jullay12. OR it seems that password typed in both the boxes are not same. Please correct it. You may use that eye button for ease.</string>
    <string name="err_msg_tnc"><![CDATA[Hey! Please check T&C box. We hope that you had read it, too.]]></string>
    <string name="err_msg_age">Type your age (in Years)</string>
    <string name="err_msg_phone">Oops! Your mobile no. is not having 10 digits/no.s. Please check and retype it again.</string>
    <string name="err_Password_check">Passwords do not match</string>
    <string name="err_msg_otp">The OTP entered by you is wrong. Please check again the SMS sent to you.</string>
    <string name="select_gender">Please select Gender</string>
    <string name="select_language_text">Select Language for App</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="gujarati">Gujarati</string>
    <string name="enter_current_password">Type current Password</string>
    <string name="enter_new_password">Type new Password</string>
    <string name="pwd_length_error">Password length must be 8 Characters.</string>
    <string name="about_us">Fathom means "understanding (a difficult problem) after much thought". With such aptitude, we have crafted this utilitarian app. A difficult problem that we have solved is of "Waiting Time" - which is very annoying and displeasing. With the aid of advanced, scientific queuing models and algorithms \'waiting time\' had been reduced to negligible. \nUnlike many appointment booking apps, Jullay is a time management app. It provides you real-time progress of the queue. So that, you can plan your visit with zero waiting time; utilize your (used-to-be) waiting time for completing other chores and tasks; get more time to enjoy weekends and life; and much more. \nWe have made it possible by collaborating with your favourite service providers: Salon, Doctors, Car Wash, Consultants like CA, Lawyers, etc.., Labs, and such more.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="type_important_notes">Type Important Notes.</string>
    <string name="type">Type....</string>
    <string name="facebook_app_id">1343659985787676</string>
    <string name="fb_login_protocol_scheme">fb1343659985787676</string>
    <string name="retry">Retry</string>
    <string name="cancel">No</string>
    <string name="ok">OK</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lgbt">Transgender</string>
    <string name="high_school">10th</string>
    <string name="intermediate">12th</string>
    <string name="graduate">Graduate</string>
    <string name="post_grad">Post-Grad.</string>
    <string name="resend_otp"><u>Did not receive the OTP? Send again.</u></string>
    <string name="enter_your_profession">Type Your Profession</string>
    <string name="live_queue_status">Live Queue Progress</string>
    <string name="company_website">Company \nWebsite:</string>
    <string name="company_website_add"><a href="https://sixhatsfathoms.in">https://sixhatsfathoms.in</a></string>
    <string name="select_category">Categories</string>
    <string name="login">Login</string>
    <string name="passcode">OTP:</string>
    <string name="close">Close</string>
    <string name="select_total_no_of_persons">How many Persons?</string>
    <string name="done">Done</string>
    <string name="slect_ny_profsnl">Select Professional/Specialist</string>
    <string name="error_staff_slectsn">Please select the Professionals for each Services selected.</string>
    <string name="select_booking_type">Select Reservation Type</string>
    <string name="people_ahead">People\nAhead</string>
    <string name="delay">(mins)\nDelay</string>
    <string name="jullay">Jullay!</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="cancel_Serv_msg">Do you really want to CANCEL this service?</string>
    <string name="enter_your_registered_phone_number">Enter your registered mobile number to receive Forgot Password OTP.</string>
    <string name="reset_heading">Reset your password, with the OTP received on your registered phone number.</string>
    <string name="select_favs">Select your Favorites</string>
    <string name="mins">mins</string>
    <string name="pwd_chnage_succss_msg">Your password is successfully changed</string>
    <string name="staff_specific_booking">Reserve Specialist</string>
    <string name="time_specific_booking">Reserve QAT</string>
    <string name="usefulness_ss"><b>Usefulness:</b>\nWhen you want to choose different professional/specialist for each of the different services.\n\nFor e.g.: Threading by some professional X, Haircut by someone else, Facial by some third different professional, and so on.</string>
    <string name="idle_time_ss"><b>Idle Time:</b>\n<font color="#FF4500">YES!</font> This Reservation Type may have some idle time in between different services. Like, there might be 20 minutes of idle time between threading and haircut. It all depends on the availability of time with each of the professional/specialist.</string>
    <string name="usefulness_ts"><b>Usefulness:</b>\nWhen you want to get all the services done by single professional/specialist. That is haircut, beard trimming, shampoo, etc.. all by single professional/specialist.</string>
    <string name="idle_time_ts"><b>Idle Time:</b>\n<font color="#4CAF50">NO!</font> This Reservation Type does not have any Idle Time as all the services are performed by single professional/specialist one after the other.</string>
    <string name="hw_many_help">These are the total no. of persons who are in need of reserving a time or services.\n\nFor e.g.: Relative along with a patient does not means selection of 2 persons. Select 2 if only there are 2 patients who want to consult the doctor. Same is in the case of Salon.\nThus, select total no. of persons accordingly i.e as per the actual no. of persons who will avail the services.</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="pref_key_live_preview_automl_remote_model_name" translatable="false">lparmn</string>
    <string name="pref_entries_automl_models_local">Local</string>
    <string name="pref_key_live_preview_automl_remote_model_choices" translatable="false">lparmc</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="enter_otp">Type OTP sent to your registered mobile number. </string>
    <string name="type_password">Type Password</string>
    <string name="next">Next</string>
    <string name="ratings">Ratings</string>
    <string name="reviews">Reviews</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="skip">Skip</string>
</resources>