<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/ten_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_regular"
            android:text="@string/staff_specific_booking"
            android:textColor="@color/lush_lava"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_regular"
            android:gravity="center_horizontal"
            android:text="@string/usefulness_ss"
            android:textColor="@color/darkBlue"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_regular"
            android:gravity="center_horizontal"
            android:text="@string/idle_time_ss"
            android:textColor="@color/darkBlue"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:fontFamily="@font/avenir_regular"
            android:text="@string/time_specific_booking"
            android:textColor="@color/lush_lava"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_regular"
            android:gravity="center_horizontal"
            android:text="@string/usefulness_ts"
            android:textColor="@color/darkBlue"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_regular"
            android:gravity="center_horizontal"
            android:text="@string/idle_time_ts"
            android:textColor="@color/darkBlue"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:fontFamily="@font/avenir_regular"
            android:text="@string/select_total_no_of_persons"
            android:textColor="@color/lush_lava"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_regular"
            android:gravity="center_horizontal"
            android:text="@string/hw_many_help"
            android:textColor="@color/darkBlue"
            android:textSize="15dp" />


    </LinearLayout>
</ScrollView>