<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notes_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/gradiant"
    android:paddingTop="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_regular"
            android:gravity="center_horizontal"
            android:text="@string/type_important_notes"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/booking_notes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789.-,"
            android:fontFamily="@font/avenir_regular"
            android:hint="@string/type"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:maxLength="200"
            android:textColor="@color/pure_white"
            android:textColorHint="@color/white"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skip"
                style="@style/CustomBlueButton"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="@font/avenir_regular"
                android:text="@string/skip" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/done_next"
                style="@style/CustomBlueButton"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="@font/avenir_regular"
                android:text="@string/done" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
