<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/ten_dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_ph_no"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textColorHint="@color/black_light"
        android:theme="@style/TextInputLayoutAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_ph_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/avenir_regular"
            android:hint="@string/enter_mobile_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/accent"
            android:textColorHint="@color/black_light"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColorHint="@color/black_light"
            android:theme="@style/TextInputLayoutAccent"
            app:passwordToggleDrawable="@drawable/ic_show_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/avenir_regular"
                android:hint="@string/type_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/accent"
                android:textColorHint="@color/black_light"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- <ImageView
             android:id="@+id/show_pwd"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="right"
             android:src="@drawable/ic_show_password" />-->
    </FrameLayout>

    <TextView
        android:id="@+id/forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/avenir_regular"
        android:padding="@dimen/ten_dp"
        android:text="@string/forgot_password"
        android:textColor="@color/accent"
        android:textSize="16dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/insidePB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        style="@style/CustomBlueButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/avenir_regular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_to_registration"
        style="@style/CustomBlueButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />


</LinearLayout>